fixed all the broken things on millville ballot page

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -235,8 +235,7 @@
                         </div>
     
                     </div>
-                    <!-- <div class="b"></div> -->
-                    <div class="personal-choice">
+                    <div class="personal-choice-millville">
                         <div class='pc-col-1'>
                             <p class="pc-line-1">Personal Choice</p>
                             <p class="pc-line-2">Seleccion Personal</p>
@@ -245,9 +244,6 @@
                     </div>
                 </div> 
         </div>
-
-         <br>
-         <br>
 
         <div class="sb-top-box"> 
                 <h4>Democrat</h4>
@@ -308,8 +304,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="b"></div> -->
-                    <div class="personal-choice">
+                    <div class="personal-choice-millville">
                         <div class='pc-col-1'>
                             <p class="pc-line-1">Personal Choice</p>
                             <p class="pc-line-2">Seleccion Personal</p>
@@ -318,9 +313,6 @@
                     </div>
                 </div> 
         </div>
-
-         <br>
-         <br>
         
             <div class="sb-top-box"> 
                 <h4>REPUBLICAN</h4>
@@ -379,18 +371,14 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="b"></div> -->
-                    <div class="personal-choice">
+                    <div class="personal-choice-millville">
                         <div class='pc-col-1'>
                             <p class="pc-line-1">Personal Choice</p>
                             <p class="pc-line-2">Seleccion Personal</p>
                         </div>
                         <div class="pc-col-2">0</div>
                     </div>
-                </div>   
-
-                 <br>
-                 <br>
+                </div>
 
                 <div class="state-senator row">
                     <div class="office-title">
@@ -418,7 +406,7 @@
                         </div>
                         <div class="a-row-2">
                             <div class="last-name push-down-last-name">
-                                <a href="Candidates/darminio.html">darminio</a>
+                                <a href="Candidates/darminio.html">Darminio</a>
                             </div>
                         </div>
                         <div class="a-row-3">
@@ -427,8 +415,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="b"></div> -->
-                    <div class="personal-choice">
+                    <div class="personal-choice-millville">
                         <div class='pc-col-1'>
                             <p class="pc-line-1">Personal Choice</p>
                             <p class="pc-line-2">Seleccion Personal</p>
