--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -195,6 +195,7 @@
                     <p class="title-party-pc">PERSONAL CHOICE</p>
                     <p class="title-party-espanol">SELECCION PERSONAL</p>
                 </div>
+                <div class="title millville-no-left-border"></div>
             </div>
 
             
@@ -265,6 +266,7 @@
                     <p class="title-party-pc">PERSONAL CHOICE</p>
                     <p class="title-party-espanol">SELECCION PERSONAL</p>
                 </div>
+                <div class="title millville-no-left-border"></div>
             </div>
 
             
@@ -334,6 +336,7 @@
                         <p class="title-party-pc">PERSONAL CHOICE</p>
                         <p class="title-party-espanol">SELECCION PERSONAL</p>
                     </div>
+                    <div class="title millville-no-left-border"></div>
                 </div>
 
                 <div class="state-senator row">
