a few more millville issues added

--- a/child_pages/cc-elections/millville_city_issues.html
+++ b/child_pages/cc-elections/millville_city_issues.html
@@ -96,7 +96,7 @@
                 An organized list of issues of contention this election cycle.
             </div>
             <div class="issues-content">
-                <h3 class="issues-heading">County Level Issues</h3>
+                <h3 class="issues-heading">Millville City Issues</h3>
                 <div class="issues-card">
                     <h5 class="issues-sub-heading">Economic Development - Pros and Cons</h5>
                     <div class="issues-sub-content">
@@ -187,6 +187,22 @@
                         The state of New Jersey has state level mandates which get passed down to the city of Millville. While sometimes these mandates make sense, 
                         oftentimes they aren't appropriate for the specific needs of Millville. This can cause conflicts when the city and its residents try to do 
                         things like build new homes. How will the candidates handle balancing the efforts of state regulations with the particular needs of Millville?
+                    </div>
+                </div>
+
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Crime and Disorderliness</h5>
+                    <div class="issues-sub-content">
+                        From our discussion with current Commissioner Ranello, public parks and public property oftentimes is subject to disorderly 
+                        behavior. How would each of the candidates ensure that our public spaces will become more orderly moving forward?
+                    </div>
+                </div>
+
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Homeless Encampments</h5>
+                    <div class="issues-sub-content">
+                        Homelessness has been an ongoing issue throughout the country and Millville has seen some increase with it over the past few years.
+                        How would the candidates handle Millville's current homeless problem?
                     </div>
                 </div>
 
