riley, austino, capizola updates

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -95,9 +95,13 @@
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Robert A. Austino</h6>
-              <p>Austino has lengthy experience working in government as sheriff, but no direct experience as a commissioner. As per a campaign picture on his 
-              <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">facebook campaign site</a>, his agenda 
-              seems to be to improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements. Additionally, on August 13th 
+              <p>Austino has lengthy experience working in government as sheriff, but no direct experience as a commissioner. As per a few campaign pictures on his 
+              facebook campaign site, 
+              <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">here</a> and 
+              <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02kXpgWN6AFFLfGwmBpbnxvUHsBi7hGUvGDJoA8LLgh8qaFWtfuroJHpU5rkBZcNp4l">here</a>, 
+              his agenda seems to be to improve roads/infrastructure/broadband, support senior housing and healthcare, provide recreational advancements, enhance 
+              resources for enforcement and emergency services, and promote local businesses and job creation.
+              Additionally, on August 13th 
               he posted on facebook with details saying he will promote economic growth, public safety, and infrastructure improvement.
               </p>
               <p>              
@@ -108,7 +112,10 @@
             <a href="https://www.informthevotenj.com/child_pages/cc-elections/cc_election_issues">county issues page</a> to get a more detailed look at what's going on in the county. 
             Also, Austino and Capizola have openly supported the Harris/Walz 
             ticket on <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">facebook</a>, 
-            so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future.
+            so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future. You can also listen 
+            to a radio show which he, Capizola, and Riley did 
+            <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>.
+
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
@@ -180,6 +187,9 @@
                     <li>Improve roads/infrastructure/broadband, support senior housing and healthcare, and provide recreational advancements
                         <a href="https://www.facebook.com/photo?fbid=122111298668284447&set=a.122109417842284447">facebook campaign site</a>
                     </li>
+                    <li>Promte local businesses and job creation, and enhance resources for enforcement and emergency services.
+                    <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02kXpgWN6AFFLfGwmBpbnxvUHsBi7hGUvGDJoA8LLgh8qaFWtfuroJHpU5rkBZcNp4l">Facebook Campaign Post</a>
+                    </li>
                 </ul>
             </div>
             
@@ -211,6 +221,11 @@
                 <p>Sheriff Austino currently is a member of the International Association of Chief of Police, National Sheriff’s Association, New Jersey Sheriff’s Association, 
                     Cumberland County Human Relations Commission and Cumberland County Youth Services Advisory Council.  He is also an advisor for the Cumberland County VoTech 
                     Center.  He is past president of the Fraternal Order of Police, Cumberland Lodge #8 and president of the Vineland Superior Officers Association.</p>
+
+                    <br>
+                    <br>
+                    Capizola and Austino also brought up an issue regarding a road in bridgeton while on the campaign trail:
+                <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>
             </div>
 
             <h4 class="sub-heading">Recent Radio Interview</h4>
