--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -97,14 +97,13 @@
                 commissioner. Some quick points of note are that he seems to have a moderate stance on gun control, supports armed security in schools, and he supported 
                 the middle mile broadband grant. He also has spoken against school vouchers, he hopes to make local politics less partisan, and he supports better transparency 
                 and communication between the government and constituents. In terms of specific agenda should he get elected, his focus seems to be to improve roads/infrastructure/broadband, 
-                to support senior housing and healthcare, and to provide recreational advancements. 
+                to support senior housing and healthcare, to provide recreational advancements. 
                 <a href="https://www.facebook.com/photo/?fbid=122116637984284447&set=a.122109417842284447">Facebook source</a>. Also, Austino and Capizola have openly supported the Harris/Walz 
                 ticket on <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">facebook</a>, 
                 so it follows that Austino/Capizola will support and/or implement that agenda, unless they clarify otherwise in the future. There was a facebook post on August 13th which 
-                additionally states his agenda will include educational excellence, environmental sustainability, and fiscal responsibility. Also, it seems as though Capizola did a few 
-                interviews with Celeste Riley, which you can view 
-                <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>, and 
-                <a href="https://www.facebook.com/wvltradio/videos/849795337255055">here</a>, but we haven't had time to review them yet.
+                additionally states his agenda will include educational excellence, environmental sustainability, and fiscal responsibility. Also, it seems as though Capizola did an 
+                interview with Celeste Riley and Robert Austino, which you can view 
+                <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
@@ -210,6 +209,10 @@
                 <ul>
                     <li>Supports armed security in schools. (learned from the Candidates Forum held at Bridgeton High School)</li>
                 </ul>
+                <br>
+                <br>
+                Capizola and Austino also brought up an issue regarding a road in bridgeton while on the campaign trail:
+                <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>
             </div>
 
             <br>
