--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -96,18 +96,20 @@
                 experience in this position than her Republican challenger, Commissioner Lods. She was an Assemblywoman in the 3rd district, having won re-election for 
                 that position, and served several committee positions during her tenure in that position. She has served as both a Bridgeton City Council member and the 
                 Bridgeton City Council president. A facebook post on August 13th states that her agenda will include streamlining county services, implementing transparency 
-                and accountability, and implementing community engagement. We have reached out to her for clarifications on overall agenda, policy, and comparisons to her challenger, 
+                and accountability, and implementing community engagement. A more recent facebook post and a recent radio show she conducted also point out that during her 
+                term she opened a satellite clerk's office at the Cumberland Mall, 'expanded transaction', 'online services', 'voter registration and VBM', 'secured election 
+                technology', digitized deeds and mortgages, and restored/preserved historic records to 1748 (we put some of those things in quotes because we're not quite 
+                sure what some of those things mean). We have reached out to her for clarifications on overall agenda, policy, and comparisons to her challenger, 
                 but we are still working out whether she will provide information directly to us for concerns regarding potential partisanship on our part. During the process of 
                 trying to contact candidates for election related information, we reached out to her offices several times and were able to get useful contact information. As of now 
                 9/1/2024, there have been some issues regarding the Clerk's office regarding things such as the 
                 <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=850813927146449&ref=share">design of the ballot</a> and how 
                 <a href="https://www.facebook.com/groups/442220931182672/permalink/870569048347856/?rdid=3pGglT6D1aPJ4RPa&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F4GMiyBpq5eJmUGZP">office literature</a>
-                is being presented to the public. You can also view what looks like a video of her and John Capizola 
-                <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>, and 
-                <a href="https://www.facebook.com/wvltradio/videos/849795337255055">here</a>, but we haven't had time to review them yet. It also seems as though they 
-                have been posting more regular information in their <a href="https://www.facebook.com/teamrileyaustinocapizola/">faebook group</a>, so be sure to follow 
-                that if you'd like to stay current. Similarly, the <a href="https://www.facebook.com/groups/442220931182672">Cumberland NJ Dems</a> have been regularly 
-                posting as well.
+                is being presented to the public. You can view the aforementioned radio show with Capizola and Austino
+                <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>
+                It also seems as though they have been posting more regular information in their <a href="https://www.facebook.com/teamrileyaustinocapizola/">faebook group</a>, 
+                so be sure to follow that if you'd like to stay current. Similarly, the <a href="https://www.facebook.com/groups/442220931182672">Cumberland NJ Dems</a> 
+                have been regularly posting as well.
                 Click the x at the top red of this box to go back to the page.
               </p>
             </div>
@@ -226,6 +228,8 @@
                     <li>Housing and Local Government Committee Member</li>
                     <li>Both Bridgeton City Council Member and President</li>
                 </ul>  
+
+
             </div>
             
     </div>
