county office response to south ave issue claim

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -209,6 +209,13 @@
             <div class="policy-positions can-sec">
                 As of 8/1/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There doesn't seem to be any available information in 
                 regards to his specific policy positions.
+                <br>
+                    <br>
+                    Capizola and Austino also brought up an issue regarding South Ave in Bridgeton while on the campaign trail:
+                <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>,
+                however it seems as though the issue is in the process of being handled: 
+                <a href="https://www.facebook.com/joe.sileo.5/posts/pfbid02B1SrVJRoPtcEKrntgp6J5zWo4xdPZC3eYDLHnCZVFANvTHjJTjY3eLc3dWGMQrasl?rdid=UC1J4QcJI0Hthza5">Source</a>
+
             </div>
 
             <h4 class="sub-heading">experience</h4>
@@ -222,10 +229,7 @@
                     Cumberland County Human Relations Commission and Cumberland County Youth Services Advisory Council.  He is also an advisor for the Cumberland County VoTech 
                     Center.  He is past president of the Fraternal Order of Police, Cumberland Lodge #8 and president of the Vineland Superior Officers Association.</p>
 
-                    <br>
-                    <br>
-                    Capizola and Austino also brought up an issue regarding a road in bridgeton while on the campaign trail:
-                <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>
+                    
             </div>
 
             <h4 class="sub-heading">Recent Radio Interview</h4>
