--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -211,8 +211,10 @@
                 </ul>
                 <br>
                 <br>
-                Capizola and Austino also brought up an issue regarding a road in bridgeton while on the campaign trail:
-                <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>
+                Capizola and Austino also brought up an issue regarding South Ave in Bridgeton while on the campaign trail:
+                <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>,
+                however it seems as though the issue is in the process of being handled: 
+                <a href="https://www.facebook.com/joe.sileo.5/posts/pfbid02B1SrVJRoPtcEKrntgp6J5zWo4xdPZC3eYDLHnCZVFANvTHjJTjY3eLc3dWGMQrasl?rdid=UC1J4QcJI0Hthza5">Source</a>
             </div>
 
             <br>
