--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -212,7 +212,13 @@
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions can-sec">
                 After reaching out to Riley and receiving no response, it is unclear how any policy positions she may have relates to the office of County Clerk other than she 
-                might be more inclined to push for Democrat policies and agendas in a Republican dominated county.            
+                might be more inclined to push for Democrat policies and agendas in a Republican dominated county.     
+                <br>
+                <br>
+                Riley, Capizola, and Austino also brought up an issue regarding South Ave in Bridgeton while on the campaign trail:
+                <a href="https://www.facebook.com/robert.austino/posts/pfbid03YKWKWQh56kDkR4ynGHHEi3MZM7o5yfynSW7eEznw5YWpBWxroCrTT4WygJPnzehl?rdid=v5nQp6dOcKrGTaQK">Source</a>,
+                however it seems as though the issue is in the process of being handled: 
+                <a href="https://www.facebook.com/joe.sileo.5/posts/pfbid02B1SrVJRoPtcEKrntgp6J5zWo4xdPZC3eYDLHnCZVFANvTHjJTjY3eLc3dWGMQrasl?rdid=UC1J4QcJI0Hthza5">Source</a>
             </div>
                 
             <h4 class="sub-heading">experience</h4>
