county clerk race updates

--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -102,11 +102,11 @@
                 sure what some of those things mean). We have reached out to her for clarifications on overall agenda, policy, and comparisons to her challenger, 
                 but we are still working out whether she will provide information directly to us for concerns regarding potential partisanship on our part. During the process of 
                 trying to contact candidates for election related information, we reached out to her offices several times and were able to get useful contact information. As of now 
-                9/1/2024, there have been some issues regarding the Clerk's office regarding things such as the 
+                9/1/2024, there have been some issues regarding the Clerk's office such as the 
                 <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=850813927146449&ref=share">design of the ballot</a> and how 
                 <a href="https://www.facebook.com/groups/442220931182672/permalink/870569048347856/?rdid=3pGglT6D1aPJ4RPa&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F4GMiyBpq5eJmUGZP">office literature</a>
-                is being presented to the public. You can view the aforementioned radio show with Capizola and Austino
-                <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>
+                is supposed to be neutral voting information potentially being presented as expensive campaign material. You can view the aforementioned radio show with Capizola and Austino
+                <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid0V9gEGpVBMcGEsMc7PVNr6qxvzrLCy1Zf7b3rvpubUJpRhqtn8h538fZfrzhiPnn2l?rdid=9H2emx8RQXDRCyA3">here</a>. 
                 It also seems as though they have been posting more regular information in their <a href="https://www.facebook.com/teamrileyaustinocapizola/">faebook group</a>, 
                 so be sure to follow that if you'd like to stay current. Similarly, the <a href="https://www.facebook.com/groups/442220931182672">Cumberland NJ Dems</a> 
                 have been regularly posting as well.
