--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -100,16 +100,20 @@
             Both parties appear to be running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level. All candidates have been
             reached out to in terms of clarifying their individual characteristics, agendas, stances on clerk-related issues, and comparisons to other candidates. We have had some communication 
             with both candidates and have received some relevant information, but not comprehensive responses for each of those topics. 
-            Celeste Riley, the incumbent, inherently has experience specifically for this position. However, some issues regarding the County Clerk Office have come up regarding the 
+            Celeste Riley, the incumbent, inherently has experience specifically for this position. However, candidate Lods has been involved in politics since she was 
+            19 years old, and has had at least several years experience interacting with the clerk's office, so she certainly wouldn't be coming in blind if elected. 
+            Of particular note, some issues regarding the County Clerk Office have come up regarding the 
             <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=850813927146449&ref=share">design of the ballot</a> and how 
             <a href="https://www.facebook.com/groups/442220931182672/permalink/870569048347856/?rdid=3pGglT6D1aPJ4RPa&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F4GMiyBpq5eJmUGZP">office literature</a>
-            is being presented to the public.
+            is potentially being presented to the public in terms of what should be neutral voting information, but could be seen as expensive campaign material.
             So, if you vote party line, as of now, that's fair. If you're more of an independent who votes for individuals as opposed to parties, there is only a limited amount of info as of yet.
             Be sure to check out the  
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
             <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Also be sure to check out the
-            <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Democrat Party Platform</a> to see the general direction of Democrats while we wait for the Harris-Walz ticket 
-            to post their specific platform (still not posted as of 9/8/2024 <a href="https://kamalaharris.com/">Campaign Site</a>). 
+            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a> to see the general direction of Democrats 
+            and the Harris-Walz issues page on their <a href="https://kamalaharris.com/issues/">Campaign Site</a>. It should be noted that the Democrats did not have 
+            a platform posted and Harris-Walz did not have their issue stances posted up until approximately mid-late September, giving voters very little (if any) time 
+            to look over the info before early/mail-in voting started.
             <br>
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
