reworded some of the clerk race quick summary

--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -106,11 +106,11 @@
             <a href="https://www.facebook.com/groups/781111154116727/?multi_permalinks=850813927146449&ref=share">design of the ballot</a> and how 
             <a href="https://www.facebook.com/groups/442220931182672/permalink/870569048347856/?rdid=3pGglT6D1aPJ4RPa&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2Fv%2F4GMiyBpq5eJmUGZP">office literature</a>
             is potentially being presented to the public in terms of what should be neutral voting information, but could be seen as expensive campaign material.
-            So, if you vote party line, as of now, that's fair. If you're more of an independent who votes for individuals as opposed to parties, there is only a limited amount of info as of yet.
-            Be sure to check out the  
+            If you're an independent who votes for individuals as opposed to parties, be sure to check out the each party's platforms as part of your overall decision 
+            making. Here is the 
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
-            <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Also be sure to check out the
-            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a> to see the general direction of Democrats 
+            <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Here is the
+            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a>  
             and the Harris-Walz issues page on their <a href="https://kamalaharris.com/issues/">Campaign Site</a>. It should be noted that the Democrats did not have 
             a platform posted and Harris-Walz did not have their issue stances posted up until approximately mid-late September, giving voters very little (if any) time 
             to look over the info before early/mail-in voting started.
