--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -129,7 +129,7 @@
                 <br>
                 When asked in person about what the specific role is of the County Clerk and how she would differentiate herself from the incumbent, she responded "If you don't
                 know what the County Clerk does, that should tell you enough about how the role is being executed.", which I believe implies that the County Clerk should be 
-                acting as the known liason between the public and the government, which is a common perception of the role. She also released the following video to help clarify the 
+                acting as the known liason between the public and the government. She also released the following video to help clarify the 
                 role of the clerk:
                 <a href="https://www.facebook.com/reel/360821143737277">Facebook Reel</a>. You might also get some more updates by following the 
                 <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland County GOP facebook group</a> for the remainder of the campaign season.
