further updates for clerk race

--- a/child_pages/cc-elections/Candidates/riley.html
+++ b/child_pages/cc-elections/Candidates/riley.html
@@ -199,20 +199,25 @@
             
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site can-sec">
-                After reaching out to various members of the CumberlandNJ Dems, it is unclear how the Democrat party agenda specifically and currently applies to Cumberland County. However, 
-                we might be able to infer the following things from last year's messaging:
-                <ul>
-                    <li>Support Senior housing and Healthcare Services.</li>
-                    <li>Provide county recreational advancements, building a county indoor sports facility and swim center and improving county recreation areas.</li>
-                    <li>Support state of the art correctional facility, by improving conditions and programs and drive long standing issues with facility to closure. Also wishes to reduce 
-                        cost and tax burden of facility.</li>
-                </ul> 
+                    To be clear, with the lack of a proper newspaper providing thorough, professional-level election coverage, both sides of the aisle in *local* 
+                politics seem to be suffering from a lack of clear messaging. This is not to say that they aren't putting forward a lot of effort to message, 
+                but the information is oftentimes scattered across the internet, spoken about at meetings/events that appear partisan or have expensive 
+                sponsorship fees, or mentioned at lengthy meetings most people simply won't attend. Oftentimes people get brief literature like
+                <details>
+                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                            <img src="../../../assets/screenshots/cumberlandDemsLit.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                </details>
+                . They also might get vague impressions of what local Republicans or Democrats might believe based on what they know about national politics. While 
+                we have been able to gain some information regarding her agenda, there is probably a lot more detail that we could go 
+                into about the specifics of the clerk's office and Riley's campaign bid.
             </div>                
             
-            <h4 class="sub-heading">policy positions</h4>
+            <h4 class="sub-heading">policy positions and issues</h4>
             <div class="policy-positions can-sec">
-                After reaching out to Riley and receiving no response, it is unclear how any policy positions she may have relates to the office of County Clerk other than she 
-                might be more inclined to push for Democrat policies and agendas in a Republican dominated county.     
+                After reaching out to Riley and receiving a hesitant response due to concerns about potential partisanship on our part, it is unclear how any 
+                policy positions she may have relates to the office of County Clerk other than she might be more inclined to push for Democrat policies and 
+                agendas in a Republican dominated county.     
                 <br>
                 <br>
                 Riley, Capizola, and Austino also brought up an issue regarding South Ave in Bridgeton while on the campaign trail:
