county commissioner race updates

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -215,6 +215,11 @@
             While we have been able to gather some specific information about Lods run for County Clerk, as shown by the above agenda and our references 
             to the issues surrounding the ballot design and election mailers from the clerk's office, there is probably a lot more detail that we could go 
             into about the specifics of the clerk's office and Lods campaign bid.
+            <br>
+            <br>
+            The one general point that the party has made clear regarding the local level, is that the Democrat party has been predominantly in control for 
+            the past 40 odd years, and they have made a mess while doing so, so perhaps it is time to let the Republicans take control for a while so they 
+            can clean it up.
                     
         </div>      
 
