--- a/child_pages/cc-elections/Candidates/romero.html
+++ b/child_pages/cc-elections/Candidates/romero.html
@@ -189,19 +189,23 @@
 
         <h4 class="sub-heading">policy positions</h4>
         <div class="policy-positions can-sec">
-            After reaching out to Commissioner Romero and not receiving a response, it is unclear what specific policy positions relevant to Cumberland County 
-            he has moving forward. However, we can infer some of the following having paid attention a fair amount over the past year:
-            <ul>
-                <li>Romero voted no to proceed with the Middle Mile Broadband Project. In his explanation he gave reasons regarding the cost and management of the project, 
-                    which he said was informed by his years of experience in the cable broadband industry. This suggests he will error on the side of fiscal conservatism and 
-                    sound business management.
-                    <a href="https://www.youtube.com/watch?v=SsZZW-I3_8c" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Work Session Video</a>
-                </li>
-                <li>
-                    While Romero might not have addressed any specific policy positions regarding social issues in Cumberland County, he has made some comments at breakfast meetings 
-                    which suggest he would move in the direction of socially conservative values.
-                </li>
-            </ul>
+            To be clear, with the lack of a proper newspaper providing thorough, professional-level election coverage, both sides of the aisle in *local* 
+            politics seem to be suffering from a lack of clear messaging. This is not to say that they aren't putting forward a lot of effort to message, 
+            but the information is oftentimes scattered across the internet, spoken about at meetings/events that appear partisan or have expensive 
+            sponsorship fees, or mentioned at lengthy meetings most people simply won't attend. Oftentimes people get brief literature like
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                        <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                        <img src="../../../assets/screenshots/ccrroLit.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+            </details>
+            . They also might get vague impressions of what local Republicans or Democrats might believe based on what they know about national politics.
+            While we have been able to gather some specific information about Romero's run for County Commissioner, as shown by the information above, there is probably a lot more 
+            detail that we could go into about the specifics of the clerk's office and Romero's campaign bid.
+            <br>
+            <br>
+            The one general point that the party has made clear regarding the local level, is that the Democrat party has been predominantly in control for 
+            the past 40 odd years, and they have made a mess while doing so, so perhaps it is time to let the Republicans take control for a while so they 
+            can clean it up.
         </div>
 
         <h4 class="sub-heading">experience</h4>
