--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -105,7 +105,7 @@
               he posted on facebook with details saying he will promote economic growth, public safety, and infrastructure improvement.
               </p>
               <p>              
-            When asked at Deerfield Day to clarify his agenda, policy positions, and comparing that to the incumbents he is challenging, Austino basically said (paraphrased): 
+            When asked at Deerfield Day to clarify his agenda, policy positions, and to compare that to the incumbents he is challenging, Austino basically said (paraphrased): 
             "My big thing is money and budget. The county is attempting to build 3 county parks when our budget is stretched. I helped run a budget for 15 years, so I will help bring 
             fiscal responsibility to the board of commissioners." However, when we checked with Commissioner Romero about this, he replied (paraphrased) "The county park projects are 
             within budget, there's nothing to be concerned about." Be sure to check our 
@@ -195,20 +195,25 @@
             
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site can-sec">
-                After reaching out to various members of the CumberlandNJ Dems, it is unclear how the Democrat party agenda specifically and currently applies to Cumberland County. However, 
-                we might be able to infer the following things from last year's messaging:
-                <ul>
-                    <li>Support Senior housing and Healthcare Services.</li>
-                    <li>Provide county recreational advancements, building a county indoor sports facility and swim center and improving county recreation areas.</li>
-                    <li>Support state of the art correctional facility, by improving conditions and programs and drive long standing issues with facility to closure. Also wishes to reduce 
-                        cost and tax burden of facility.</li>
-                </ul> 
+                    To be clear, with the lack of a proper newspaper providing thorough, professional-level election coverage, both sides of the aisle in *local* 
+                politics seem to be suffering from a lack of clear messaging. This is not to say that they aren't putting forward a lot of effort to message, 
+                but the information is oftentimes scattered across the internet, spoken about at meetings/events that appear partisan or have expensive 
+                sponsorship fees, or mentioned at lengthy meetings most people simply won't attend. Oftentimes people get brief literature like
+                <details>
+                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                            <img src="../../../assets/screenshots/cumberlandDemsLit.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                </details>
+                . They also might get vague impressions of what local Republicans or Democrats might believe based on what they know about national politics. While 
+                we have been able to gain some information regarding his agenda, there is probably a lot more detail that we could go 
+                into about the specifics of the Commissioner's board and Austino's campaign bid.
             </div>
 
-            <h4 class="sub-heading">policy positions</h4>
+            <h4 class="sub-heading">policy positions and issues</h4>
             <div class="policy-positions can-sec">
-                As of 8/1/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There doesn't seem to be any available information in 
-                regards to his specific policy positions.
+                As of 9/29/2024, Inform the Vote has scoured the internet and attempted to contact the former Sheriff multiple times. There doesn't seem to be any available information in 
+                regards to his specific policy positions, other than he is against what he claims is the county over-spending on county park projects... however, we cross-checked 
+                this with Commissioner Romero who says the parks are within budget and there is no need for concern.
                 <br>
                     <br>
                     Capizola and Austino also brought up an issue regarding South Ave in Bridgeton while on the campaign trail:
