--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -188,14 +188,18 @@
 
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site can-sec">
-                After reaching out to various members of the CumberlandNJ Dems, it is unclear how the Democrat party agenda specifically and currently applies to Cumberland County. However, 
-                we might be able to infer the following things from last year's messaging:
-                <ul>
-                    <li>Support Senior housing and Healthcare Services.</li>
-                    <li>Provide county recreational advancements, building a county indoor sports facility and swim center and improving county recreation areas.</li>
-                    <li>Support state of the art correctional facility, by improving conditions and programs and drive long standing issues with facility to closure. Also wishes to reduce 
-                        cost and tax burden of facility.</li>
-                </ul> 
+                    To be clear, with the lack of a proper newspaper providing thorough, professional-level election coverage, both sides of the aisle in *local* 
+                politics seem to be suffering from a lack of clear messaging. This is not to say that they aren't putting forward a lot of effort to message, 
+                but the information is oftentimes scattered across the internet, spoken about at meetings/events that appear partisan or have expensive 
+                sponsorship fees, or mentioned at lengthy meetings most people simply won't attend. Oftentimes people get brief literature like
+                <details>
+                    <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
+                            <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
+                            <img src="../../../assets/screenshots/cumberlandDemsLit.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
+                </details>
+                . They also might get vague impressions of what local Republicans or Democrats might believe based on what they know about national politics. While 
+                we have been able to gain some information regarding his agenda, there is probably a lot more detail that we could go 
+                into about the specifics of the Commissioner's board and Austino's campaign bid.
             </div>
 
             <br>
