millville commissioners updates

--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -94,11 +94,11 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Carole E. Cossaboon</h6>
               <p>
-                Ms. Cossaboon has been a resident of Millville her whole life and has a wide range of relevant political experience including worked for the 
+                Ms. Cossaboon has been a resident of Millville her whole life and has a wide range of relevant political experience including having worked for the 
                 Millville Board of Education for over 30 years, 'sitting as a board of director' for the for Shirley Eves Developmental Center, being the 
                 Lodge Secretary for the Millville Elks, being the treasurer/negotiator/grievance chair for the Millville Education Association, and more.
                 Her vision as a commissioner is to be an independent voice for common sense that will help bring unity to the board and accomplish goals for the 
-                city such as attracting jobs at the industrial parks and airport, tackle the issue of absentee landlords, and demolish properties when 
+                city, such as attracting jobs at the industrial parks and airport, tackle the issue of absentee landlords, and demolish properties when 
                 necessary.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
