--- a/child_pages/cc-elections/Candidates/ranello.html
+++ b/child_pages/cc-elections/Candidates/ranello.html
@@ -131,7 +131,8 @@
                     <summary style="cursor:pointer; color:blue; text-decoration:underline;">View Screenshot</summary>
                     <p>If on desktop, right click the image and select 'open in new tab' for a larger image</p>
                     <img src="../../../assets/screenshots/ranelloPublicSafety.PNG" alt="Screenshot Thumbnail" id="screenshotThumbnail" style="cursor:pointer; width:100%; max-width: 80vw; margin-top: 10px;">
-                </details>, all of which seems to be in line with her stance on trying to build a stronger community.
+                </details>, all of which seems to be in line with her stance on trying to build a stronger community. This is also supported in an interview she did on 92.1 WVLT, 
+                which she reposted <a href="https://www.facebook.com/story.php?story_fbid=959481269533237&id=100064141170917&rdid=hJMO4vZJJFSioRXV">here</a>.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
