--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -190,7 +190,14 @@
                 <ul class="testa-agenda">
                     <li>
                         <ol>
-                            <li>Wants to secure the border while revamping legal immigration policy</li>
+                            <li>
+                            Wants to secure the border while revamping legal immigration policy. Cites a 
+                            <a href="https://www.njassemblygop.com/DocumentCenter/View/522/nj-illegal-immigration-costs-2024-PDF?bidId=">study</a> that suggests illegal immigration 
+                            is costing New Jersey $7.3 billion per year ($2100 per household) while 
+                            <a href="https://clerk.house.gov/Votes/2024215">Andy Kim voted against</a> the 
+                            <a href="https://www.congress.gov/bill/118th-congress/house-bill/8146/text">Police Our Borders Act</a>
+                            </li>
+
                             <li>Wants to end sanctuary state status in NJ</li>
                             <li>He believes in protecting parents rights in schools</li>
                             <li>He believes SALT (state and local taxes) rates are lopsided in NJ</li>
